cmake_minimum_required(VERSION 3.4)

project(leetcode CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

include_directories(.)

add_executable(lc2.exe AddTwoNumbers-2.cpp)
add_executable(lc3.exe LongestSubstringWithoutRepeatingCharacters-3.cpp)
add_executable(lc5.exe LongestPalindromicSubstring-5.cpp)
add_executable(lc6.exe ZigZagConversion-6.cpp)
add_executable(lc7.exe ReverseInteger-7.cpp)
add_executable(lc8.exe StringToIntegerAtoi-8.cpp)
add_executable(lc9.exe PalindromeNumber-9.cpp)
add_executable(lc11.exe ContainerWithMostWater-11.cpp)
add_executable(lc18.exe 4Sum-18.cpp)
add_executable(lc19.exe RemoveNthNodeFromEndOfList-19.cpp)
add_executable(lc20.exe ValidParentheses-20.cpp)
add_executable(lc21.exe MergeTwoSortedLists-21.cpp)
add_executable(lc23.exe MergeKSortedLists-23.cpp)
add_executable(lc24.exe SwapNodesInPairs-24.cpp)
add_executable(lc25.exe ReverseNodesInKGroup-25.cpp)
add_executable(lc29.exe DivideTwoIntegers-29.cpp)
add_executable(lc33.exe SearchInRotatedSortedArray-33.cpp)
add_executable(lc36.exe ValidSudoku-36.cpp)
add_executable(lc40.exe CombinationSumII-40.cpp)
add_executable(lc46.exe Permutations-46.cpp)
add_executable(lc47.exe PermutationsII-47.cpp)
add_executable(lc48.exe RotateImage-48.cpp)
add_executable(lc49.exe GroupAnagrams-49.cpp)
add_executable(lc50.exe PowXN-50.cpp)
add_executable(lc51.exe NQueens-51.cpp)
add_executable(lc52.exe NQueensII-52.cpp)
add_executable(lc53.exe MaximumSubarray-53.cpp)
add_executable(lc54.exe SpiralMatrix-54.cpp)
add_executable(lc55.exe JumpGame-55.cpp)
add_executable(lc56.exe MergeIntervals-56.cpp)
add_executable(lc58.exe LengthOfLastWord-58.cpp)
add_executable(lc59.exe SpiralMatrixII-59.cpp)
add_executable(lc61.exe RotateList-61.cpp)
add_executable(lc73.exe SetMatrixZeroes-73.cpp)
add_executable(lc77.exe Combinations-77.cpp)
add_executable(lc79.exe WordSearch-79.cpp)
add_executable(lc82.exe RemoveDuplicatesFromSortedListII-82.cpp)
add_executable(lc83.exe RemoveDuplicatesFromSortedList-83.cpp)
add_executable(lc84.exe LargestRectangleInHistogram-84.cpp)
add_executable(lc86.exe PartitionList-86.cpp)
add_executable(lc94.exe BinaryTreeInorderTraversal-94.cpp)
add_executable(lc98.exe ValidateBinarySearchTree-98.cpp)
add_executable(lc100.exe SameTree-100.cpp)
add_executable(lc101.exe SymmetricTree-101.cpp)
add_executable(lc102.exe BinaryTreeLevelOrderTraversal-102.cpp)
add_executable(lc104.exe MaximumDepthOfBinaryTree-104.cpp)
add_executable(lc105.exe ConstructBinaryTreeFromPreorderAndInorderTraversal-105.cpp)
add_executable(lc106.exe ConstructBinaryTreeFromInorderAndPostorderTraversal-106.cpp)
add_executable(lc107.exe BinaryTreeLevelOrderTraversalII-107.cpp)
add_executable(lc110.exe BalancedBinaryTree-110.cpp)
add_executable(lc111.exe MinimumDepthOfBinaryTree-111.cpp)
add_executable(lc112.exe PathSum-112.cpp)
add_executable(lc113.exe PathSumII-113.cpp)
add_executable(lc116.exe PopulatingNextRightPointersInEachNode-116.cpp)
add_executable(lc117.exe PopulatingNextRightPointersInEachNodeII-117.cpp)
add_executable(lc118.exe PascalsTriangle-118.cpp)
add_executable(lc119.exe PascalsTriangleII-119.cpp)
add_executable(lc124.exe BinaryTreeMaximumPathSum-124.cpp)
add_executable(lc129.exe SumRootToLeafNumbers-129.cpp)
# add_executable(lc134.exe GasStation-134.cpp)
add_executable(lc141.exe LinkedListCycle-141.cpp)
add_executable(lc142.exe LinkedListCycleII-142.cpp)
add_executable(lc143.exe RecorderList-143.cpp)
add_executable(lc144.exe BinaryTreePreorderTraversal-144.cpp)
add_executable(lc145.exe BinaryTreePostorderTraversal-145.cpp)
add_executable(lc148.exe SortList-148.cpp)
add_executable(lc150.exe EvaluateReversePolishNotation-150.cpp)
add_executable(lc151.exe ReverseWordsInAString-151.cpp)
add_executable(lc160.exe IntersectionOfTwoLinkedLists-160.cpp)
add_executable(lc206.exe ReverseLinkedListII-206.cpp)
add_executable(lc216.exe CombinationSumIII-216.cpp)
add_executable(lc344.exe ReverseString-344.cpp)
add_executable(lc404.exe SumOfLeftLeaves-404.cpp)
add_executable(lc437.exe PathSumIII-437.cpp)
add_executable(lc541.exe ReverseStringII-541.cpp)
add_executable(lc557.exe ReverseWordsInAStringIII-557.cpp)
add_executable(lc563.exe BinaryTreeTilt-563.cpp)
add_executable(lc889.exe ConstructBinaryTreeFromPreorderAndPostorderTraversal-889.cpp)
